--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@formkit/themes": "^1.0.0-alpha.5",
-    "@formkit/vue": "^1.0.0-alpha.5",
+    "@formkit/themes": "^1.0.0-beta.2",
+    "@formkit/vue": "^1.0.0-beta.2",
     "vue": "^3.2.16"
   },
   "devDependencies": {
