--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@formkit/icons": "1.0.0-beta.12",
     "@formkit/themes": "^1.0.0-beta.12",
     "@formkit/vue": "^1.0.0-beta.12",
-    "@formkit/icons": "1.0.0-beta.12",
     "vue": "^3.2.16",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "sass": "^1.56.1",
-    "typescript": "^4.6.4",
     "tailwindcss": "^3.2.4",
+    "typescript": "^4.6.4",
     "vite": "^2.6.4",
     "vue-tsc": "^1.0.9"
   }
