--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@formkit/icons": "1.0.0-beta.12",
+    "@formkit/pro": "^1.0.0-alpha.37",
     "@formkit/themes": "^1.0.0-beta.12",
     "@formkit/vue": "^1.0.0-beta.12",
+    "pinia": "^2.0.27",
     "vue": "^3.2.16",
     "vue-router": "^4.1.6"
   },
