--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "esModuleInterop": true,
       "lib": ["ESNext", "DOM"],
       "skipLibCheck": true,
-      "noEmit": true
+      "noEmit": true,
+      "noImplicitAny": false
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
     "references": [{ "path": "./tsconfig.node.json" }]
