--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.5",
     "@formkit/icons": "1.0.0-beta.12",
-    "@formkit/pro": "^1.0.0-alpha.37",
+    "@formkit/pro": "^1.0.0-alpha.48",
     "@formkit/themes": "^1.0.0-beta.12",
     "@formkit/vue": "^1.0.0-beta.12",
     "pinia": "^2.0.27",
