--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-free": "6.3.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
